<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasketballJerseys</string>
    <string name="start_name">FISHER</string>
    <string name="start_number">42</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="red_jersey">Red Jersey</string>
    <string name="blue_jersey">Blue Jersey</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jersey_display">JerseyDisplayActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
