<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/jersey_info_name_label"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jersey_info_name_edit_text"
        android:layout_below="@id/jersey_info_name_label"
        android:hint="@string/name"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:id="@+id/jersey_info_number_label"
        android:layout_below="@id/jersey_info_name_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jersey_info_number_edit_text"
        android:hint="@string/number"
        android:layout_below="@id/jersey_info_number_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jersey_info_number_edit_text" >


        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/red_jersey"
            android:textOff="@string/blue_jersey"
            android:id="@+id/jersey_info_toggle_color_button"
            android:layout_weight="1"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/jersey_info_cancel_button"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/jersey_info_ok_button"
            android:layout_weight="1"/>
    </LinearLayout>



</RelativeLayout>
