<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/jersey_image"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/red_jersey"/>

    <TextView
        android:id="@+id/jersey_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/jersey_number_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_number"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/jersey_display_edit_button"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>